[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pandsvn-drl"
version = "0.1.0"
description = "Deep reinforcement learning for joint sensing and processing in vehicular networks"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
